--- a/src/assets/scss/3_locksmith.scss
+++ b/src/assets/scss/3_locksmith.scss
@@ -43,6 +43,7 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
+    font-weight: 700;
     li {
         padding-left: 40px;
         position: relative;
