--- a/src/assets/scss/7_burglaryProtection.scss
+++ b/src/assets/scss/7_burglaryProtection.scss
@@ -19,6 +19,7 @@
 }
 .burglaryProtection__right {
     margin-top: 20px;
+    padding: 0 10px;
 }
 .burglaryProtection__ul {
     line-height: 26px;
