--- a/src/assets/scss/8_openingRepairingSafes.scss
+++ b/src/assets/scss/8_openingRepairingSafes.scss
@@ -18,6 +18,7 @@
     @include title;
 }
 .openingRepairingSafesd__right {
+    padding: 0 10px;
 }
 .openingRepairingSafes__txt {
     line-height: 26px;
