--- a/src/assets/scss/0_style.scss
+++ b/src/assets/scss/0_style.scss
@@ -26,6 +26,11 @@ a{
     max-width: 1100px;
     margin: 0 auto;
 }
+.containerP0 {
+    max-width: 1100px;
+    margin: 0 auto;
+    padding: 0;
+}
 body{
     margin: auto;
     padding: 0;
@@ -46,6 +51,7 @@ $mainColor: #3759b4;
     padding: 10px 5px 10px 50px;
     position: relative;
     margin-top: -20px;
+    font-size: clamp(20px,5vw,32px);
     &::before{
         content: '❯';
         position: absolute;
