--- a/src/assets/scss/9_recommendedByInsurancse.scss
+++ b/src/assets/scss/9_recommendedByInsurancse.scss
@@ -7,6 +7,7 @@
     gap: 20px;
 }
 .recommendedByInsurance__left {
+
 }
 .recommendedByInsurance__title {
     padding: 10px;
@@ -19,10 +20,13 @@
 .recommendedByInsurance__txt {
     line-height: 26px;
     margin-top: 20px;
+    padding: 0 10px;
+
 }
 .recommendedByInsurance__right {
 }
 .recommendedByInsurance__img {
     width: 100%;
     height: 100%;
+    object-fit: contain;
 }
