--- a/src/assets/scss/x_btnFixed.scss
+++ b/src/assets/scss/x_btnFixed.scss
@@ -3,7 +3,7 @@
     position: fixed;
     bottom: 0;
     width: 100%;
-    padding: 0 1px;
+    padding: 0;
     margin-bottom: 10px;
 }
 .btnFixed__box {
@@ -13,4 +13,32 @@
     width: 100%;
     text-align: center;
     padding: 16px 15px;
+    border-radius: 0;
+    &::after{
+        content: '';
+        position: absolute;
+        right: 10px;
+        top: 5px;
+        font-size: 12px;
+    }
+}
+
+
+
+.btnFixedD {
+    position: fixed;
+    bottom: 20px;
+    right: 10px;
+}
+.btnFixedD__box {
+}
+.btnFixedD__btn {
+    background-color: #33ac30;
+    padding: 10px;
+    border-radius: 50px;
+    width: 38px;
+    height: 38px;
+}
+.btnFixedD__img{
+    width: 100%;
 }
